--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="birth.css">
     <script src="goal.js" defer></script>
     <link rel="stylesheet" href="goal.css">
+    <script src="rapid.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,6 +61,8 @@
         <button id="close-menu-btn" onclick="toggleMenu()">&times;</button>
         <h3>Quiz Management</h3>
         <button class="button-quiz" onclick="setFolderGoals()">Set Folder Goals</button>
+                <button class="button-quiz " onclick="startRapidRound()">Rapid Round</button>
+
         <button class="button-quiz" onclick="createFolder()">Create Folder</button>
         <button class="button-quiz" onclick="document.getElementById('jsonFileInputUpload').click()">Upload Quiz
             JSON</button>
