--- a/index.html
+++ b/index.html
@@ -60,21 +60,26 @@
     <div id="mobile-menu">
         <button id="close-menu-btn" onclick="toggleMenu()">&times;</button>
         <h3>Quiz Management</h3>
+                <button class="button-quiz" onclick="toggleTheme()">Toggle Theme</button>
+
         <button class="button-quiz" onclick="setFolderGoals()">Set Folder Goals</button>
                 <button class="button-quiz " onclick="startRapidRound()">Rapid Round</button>
+<!-- Inside the mobile-menu div, add this button -->
+<button class="button-quiz" onclick="showAddQuestionDialog()">Add Question</button>
+                <button class="button-quiz" onclick="showFlashcards()">Flashcards</button>
 
         <button class="button-quiz" onclick="createFolder()">Create Folder</button>
-        <button class="button-quiz" onclick="document.getElementById('jsonFileInputUpload').click()">Upload Quiz
-            JSON</button>
-        <button class="button-quiz" onclick="document.getElementById('jsonFileInputRestore').click()">Restore
+          <button class="button-quiz" onclick="document.getElementById('jsonFileInputRestore').click()">Restore
             Data</button>
+
+      
         <button class="button-quiz" onclick="downloadData()">Download Memory</button>
-        <button class="button-quiz" onclick="toggleTheme()">Toggle Theme</button>
+                <button class="button-quiz" onclick="document.getElementById('jsonFileInputUpload').click()">Upload Quiz
+            JSON</button>
         <button class="button-quiz" onclick="shuffleQuiz()">Shuffle Quiz</button>
         <button class="button-quiz" onclick="clearMemory()">Clear Memory</button>
         <button class="button-quiz" onclick="clearAndRefresh()">Reset All Data</button>
         <button class="button-quiz" onclick="showAnalysis()">Quiz Analysis</button>
-        <button class="button-quiz" onclick="showFlashcards()">Flashcards</button>
         <input type="file" id="jsonFileInputUpload" style="display: none;" accept=".json"
             onchange="handleFileUpload(event)">
         <input type="file" id="jsonFileInputRestore" style="display: none;" accept=".json"
