--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             JSON</button>
         <button class="button-quiz" onclick="shuffleQuiz()">Shuffle Quiz</button>
         <button class="button-quiz" onclick="clearMemory()">Clear Memory</button>
-        <button class="button-quiz" onclick="clearAndRefresh()">Reset All Data</button>
+        <button class="button-quiz delete-btn" onclick="confirmDeleteFolder()">Delete Folder</button>
         <button class="button-quiz" onclick="showAnalysis()">Quiz Analysis</button>
         <input type="file" id="jsonFileInputUpload" style="display: none;" accept=".json"
             onchange="handleFileUpload(event)">
